PharmaDemo/src/objects/Wholesaler__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Must choose an account/organisation</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Organisation</value>
            </filterItems>
            <infoMessage>Must choose an account/organisation</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Wholesalers</relationshipLabel>
        <relationshipName>Wholesalers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Must choose an Wholesaler</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wholesaler</value>
            </filterItems>
            <infoMessage>Must choose an Wholesaler</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Wholesalers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wholesaler</label>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Wholesaler</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wholesalers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>